syntax = "proto3";
package VRDAVis;

import "defs.proto";
import "enums.proto";

// ADD_REQUIRED_CUBES
// Provides a list of cubes that are required for the specified file
message AddRequiredCubes {
    // The file ID that the view corresponds to
    sfixed32 file_id = 1;
    // The list of tiles required, in encoded coordinate
    repeated sfixed32 cubes = 2;
    // The compression algorithm used
    // CompressionType compression_type = 3;
    // Compression quality switch
    // float compression_quality = 4;
}

// REMOVE_REQUIRED_CUBELETS
// Provides a list of cubelets that are required for the specified file
message RemoveRequiredCubelets {
    // The file ID that the view corresponds to
    sfixed32 file_id = 1;
    // The list of tiles required, in encoded coordinate
    repeated sfixed32 cubes = 2;
}