syntax = "proto3";
package VRDAVis;

import "enums.proto";

message Cubelet {
    // Cube layer coordinate. If this is < 0, the ``mip`` value is used for coordinates instead
    sfixed32 layer = 1;
    // Cube x coordinate
    sfixed32 x = 2;
    // Cube y coordinate
    sfixed32 y = 3;
    // Cube z coordinate
    sfixed32 z = 4;
    // Width of the cube data. If this is left as zero, the default tile size should be used
    sfixed32 width = 5;
    // Height of the cube data. If this is left as zero, the default tile size should be used
    sfixed32 height = 6;
    // Height of the cube data. If this is left as zero, the default tile size should be used
    sfixed32 length = 7;
    // Volume data. For uncompressed data, this is converted into FP32, while for compressed data,
    // this is passed to the compression library for decompression.
    bytes volume_data = 8;
    // Run-length encodings of NaN values. These values are used to restore the NaN values after decompression.
    bytes nan_encodings = 9;
    // Mip coordinate. Ignored if ``layer`` >= 0
    sfixed32 mip = 10;
}